--- a/package.json
+++ b/package.json
@@ -27,34 +27,33 @@
   },
   "homepage": "https://github.com/mixer/postmessage-rpc#readme",
   "devDependencies": {
-    "@types/chai": "^4.1.4",
-    "@types/chai-subset": "^1.3.1",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.9.4",
-    "@types/sinon": "^5.0.2",
-    "chai": "^4.1.2",
+    "@onslip/karma-safari-launcher": "^1.0.1",
+    "@types/chai": "^4.2.18",
+    "@types/chai-subset": "^1.3.3",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.12.2",
+    "@types/sinon": "^10.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "chai": "^4.3.4",
     "chai-subset": "^1.6.0",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "karma": "^3.0.0",
-    "karma-browserstack-launcher": "^1.3.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.2",
-    "karma-coverage-istanbul-reporter": "^2.0.2",
-    "karma-mocha": "^1.3.0",
+    "eslint": "^7.28.0",
+    "karma": "^6.3.4",
+    "karma-browserstack-launcher": "^1.6.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.1",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-webpack": "^3.0.0",
-    "mocha": "^5.2.0",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.14.2",
-    "sinon": "^6.1.5",
-    "ts-loader": "^4.5.0",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "typescript": "~2.8.2",
-    "webpack": "^4.17.1"
+    "karma-typescript": "^5.5.1",
+    "karma-typescript-es6-transform": "^5.5.1",
+    "mocha": "^9.0.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.1",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "eventemitter3": "^3.1.0"
+    "eventemitter3": "^4.0.7"
   },
   "prettier": {
     "trailingComma": "all",
